<resources>
    <string name="app_name">PedraPapelTesoura</string>
    <string name="_1_vs_1">1 VS 1</string>
    <string name="_1_vs_2">1 VS 2</string>
    <string name="how_to_play">How to play</string>
    <string name="main_image_description">Três mãos, uma completamente aberta, outra fechada em punho e outra com os dedos médio e indicador levantados, posicionadas a frente de 1 círculo dourado preenchido por tons de amarelo em formação triangular, as mãos estão jogando pedra papel tesoura.</string>
    <string name="you">You</string>
    <string name="cpu">CPU</string>
    <string name="cpu_2">CPU 2</string>
    <string name="rock">rock</string>
    <string name="paper">paper</string>
    <string name="scissor">scissor</string>
    <string name="imageviewplayer">A image that refers to the selected option by the real player</string>
    <string name="cpu_selection">a image that refers to the option selected by the cpu</string>
    <string name="spock">spock</string>
    <string name="lizard">lizard</string>
</resources>