<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayGame">

    <View
        android:id="@+id/centerView"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="#ffd659"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/youTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/centerView"/>

    <TextView
        android:id="@+id/cpu1Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpu"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/cpu2Tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/centerView"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/cpu2Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpu_2"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cpu1Tv"
        app:layout_constraintBottom_toTopOf="@id/centerView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/rockBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rock"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@drawable/gradient_bg"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/paperBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/paper"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@drawable/gradient_bg"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/scissorBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scissor"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@drawable/gradient_bg"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>